--- a/cli-input-adapter/pom.xml
+++ b/cli-input-adapter/pom.xml
@@ -53,6 +53,12 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>2.3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<version>${global.springframework.boot.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -60,7 +66,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${global.springframework.boot.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 				<configuration>
+					<mainClass>co.edu.javeriana.as.personapp.PersonAppCli</mainClass>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
