--- a/cli-input-adapter/src/main/resources/application-docker.properties
+++ b/cli-input-adapter/src/main/resources/application-docker.properties
@@ -5,11 +5,11 @@ logging.file.name=logs/persona.log
 #Bean reference Config
 spring.main.allow-circular-references=true
 #MariaDB Config
-spring.datasource.url=jdbc:mariadb://localhost:3307/persona_db
+spring.datasource.url=jdbc:mariadb://personapp-mariadb:3306/persona_db
 spring.datasource.username=persona_db
 spring.datasource.password=persona_db
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 #MongoDB Config
-spring.data.mongodb.uri=mongodb://persona_db:persona_db@localhost:27017/persona_db?authSource=admin
+spring.data.mongodb.uri=mongodb://persona_db:persona_db@personapp-mongodb:27017/persona_db?authSource=persona_db 
