--- a/maria-output-adapter/pom.xml
+++ b/maria-output-adapter/pom.xml
@@ -11,6 +11,11 @@
 	<artifactId>maria-output-adapter</artifactId>
 	<name>PersonAPP MariaDB Persistence Output Adapter</name>
 	<description>MariaDB Persistence Output Adapter for PersonAPP</description>
+
+	<properties>
+		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>co.edu.javeriana.as.personapp</groupId>
@@ -27,5 +32,46 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>3.1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${org.mapstruct.version}</version>
+		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>${global.java.version}</source>
+					<target>${global.java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${org.mapstruct.version}</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.26</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</path>
+					</annotationProcessorPaths>
+					<compilerArgs>
+						<compilerArg>
+							-Amapstruct.defaultComponentModel=spring
+						</compilerArg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
